[package]
name = "validator"
version = "0.18.2"
authors = ["Vincent Prouillet <hello@vincentprouillet.com"]
license = "MIT"
description = "Common validation functions (email, url, length, ...) and trait - to be used with `validator_derive`"
homepage = "https://github.com/Keats/validator"
repository = "https://github.com/Keats/validator"
keywords = ["validation", "api", "validator"]
edition = "2021"
readme = "../README.md"

[dependencies]
url = { package = "url", version = "2", optional = true }
regex = { package = "regex", version = "1", default-features = false }
once_cell= { package = "once_cell", version = "1.18.0", optional = true }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
idna = { package = "idna", version = "1", optional = true }
serde = { version = "1.0.164", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.120", default-features = false, features = ["alloc"] }
validator_derive = { version = "0.18", path = "../validator_derive", optional = true }
validator_derive_nostd = { package = "validator_derive", version = "0.18", path = "../validator_derive", default-features = false, optional = true }
card-validate = { version = "2.3", optional = true }
unic-ucd-common = { version = "0.9", optional = true }
indexmap = { version = "2.0.0", features = ["serde"], optional = true }
hashbrown = { version = "0.14.5", features = ["serde"]  }
cfg-if = "1.0"

[features]
default = ["url_support", "regex_support", "std", "idna" ]
card = ["card-validate"]
unic = ["unic-ucd-common"]
derive = ["validator_derive"]
derive_nostd = ["validator_derive_nostd"]
url_support = ["url"]
regex_support = []
std = ["once_cell", "regex/std", "serde_json/std", "serde/std"]
